# nolia

./: Cargo.toml  readme.md  test.nol
compiler/: Cargo.toml
compiler/src/: lib.rs
compiler/src/emitting/: mod.rs  types.rs
compiler/src/emitting/functions/: asm.rs  mod.rs  structured.rs
compiler/src/lowering/: conversions.rs  lcr.rs  mod.rs
lib/core/: entry.nol  error.nol  int.nol  mod.nol  num.nol
progs/: hello.nla
src/: compiler.rs  main.rs
src/compiler/: mod.rs
src/compiler/emitting/: functions.rs  mod.rs  types.rs
src/compiler/emitting/functions/: asm.rs  mod.rs  structured.rs
src/compiler/lowering/: conversions.rs  lcr.rs  mod.rs  path.rs
src/parser/: ast.rs  lang.lalrpop  mod.rs
src/vm/: mod.rs
syntax/: Cargo.toml  build.rs
syntax/src/: lib.rs
syntax/src/lexer/: mod.rs
syntax/src/parser/: ast.rs  lang.lalrpop  mod.rs
vm/: Cargo.toml
vm/src/: lib.rs
