[workspace]
members = [
    "compiler",
    "syntax",
    "vm",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Spaceginner <ivan.demian2009@gmail.com>"]
repository = "https://github.com/Spaceginner/nolia"
license = "LGPL-3"

[workspace.dependencies]
either = "1.15.0"
syntax = { path = "syntax" }
compiler = { path = "compiler" }
vm = { path = "vm" }

[profile.release]
lto = "thin"
strip = "debuginfo"

[package]
name = "nolia"
readme = "readme.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syntax.workspace = true
compiler.workspace = true
vm.workspace = true
